添加新主页

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<title>Jiashun Ye</title>
 	<meta charset="utf-8">
-
     <link rel="icon" href="https://www.seu.edu.cn/favicon.ico" sizes="32x32">
 </head>
 <body leftmargin="40" bgcolor="#FFFFFF" link="#444444" text="#444444">
@@ -13,122 +12,136 @@
 		<tbody>
 			<tr>
 				<td width="323">
-					<p align="center"><font face="Arial"><img border="0" src="img/profile.png" width="984" height="1375"></font></p>
+					<p align="center"><img border="0" src="img/profile.png" width="255" height="255"></p>
 				</td>
 				<td>
 					<font face="Arial" size="5"><b>Jiashun Ye <span lang="zh-cn">叶家顺</span></b></font>
-					<p><font face="Arial" style="font-size: 11pt;">Undergraduate Student, Math & CS, Southeast University</font></p>
-					<p><font face="Arial" style="font-size: 11pt;">Address: Southeast University, Nanjing, China</font></p>
-					<p><font face="Arial" style="font-size: 11pt;">Email: jiashun-ye@example.com</font></p>
+					<p><font face="Arial" style="font-size: 11pt;">Undergraduate Student, Math & CS, SEU</font></p>
+					<p><font face="Arial" style="font-size: 11pt;">Address: Nanjing, China</font></p>
+					<p><font face="Arial" style="font-size: 11pt;">Email: 213220206@seu.edu.cn</font></p>
 				</td>
 			</tr>
 		</tbody>
 	</table>
+
 	<table border="1" style="border-width: 0px;" width="820">
 		<tbody>
 			<tr>
 				<td style="border-style: none; border-width: medium;">
 					<p style="margin-top: 3px; margin-bottom: 3px;"><font face="Arial" style="font-size: 11pt;">
-
-						I am an undergraduate student majoring in Mathematics with a minor in Computer Science at <font face="Arial"><a href="https://www.seu.edu.cn/"><font color="#444444">Southeast University</font></a></font>. My research interests include machine learning, computer vision, and mathematical optimization.
+						I am an undergraduate student majoring in Mathematics with a minor in Computer Science at 
+						<a href="https://www.seu.edu.cn/"><font color="#444444">Southeast University</font></a>. 
+						My research interests include machine learning, computer vision, and mathematical optimization.
 						<br><br>
-
 						待定：在这里添加更多关于你的研究兴趣、目标和背景的介绍。
 						<br><br>
-						
 						待定：在这里添加一些个人特色和成就。
 						<br><br>
-
 						待定：在这里添加一些未来规划，如研究生申请方向等。
 						<br><br>
-						
 					</font></p>
 				</td>
 			</tr>
 		</tbody>
 	</table>
 
-	<meta charset="utf-8">
+	<p><b><font face="Arial" size="4"><br>Education & Experience</font></b></p>
+	<ul>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				<b>Southeast University</b>, B.S. in Mathematics, minor in Computer Science, 2020–2024 (待定)
+			</font></p>
+		</li>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				<b>待定</b>: 实习或工作经历
+			</font></p>
+		</li>
+	</ul>
 
-	<p><b><font face="Arial" size="4"><br>
-		Education & Experience</font></b></p>
-		<ul>
-			<li>
-				<p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font face="Arial" size="2"><b>Southeast University</b>, B.S. in Mathematics, minor in Computer Science, 2020-2024 (待定)</font>
-			</li>
-			<li>
-				<p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font face="Arial" size="2"><b>待定</b>: 实习或工作经历</font>
-			</li>
-		</ul>
-		<p></p>
+	<p><b><font face="Arial" size="4"><br>Teaching</font></b></p>
+	<ul>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				<a href="#"><font color="#444444">待定：在线教学课程名称</font></a>, 平台名称, 2023.
+			</font></p>
+		</li>
+	</ul>
 
-	<p><b><font face="Arial" size="4"><br>
-		Teaching</font></b></p>
-		<ul>
-			<li>
-				<p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font face="Arial" size="2"><a href="#"><font color="#444444"><font face="Arial" size="2"><font color="#444444">待定：在线教学课程名称</font></font></font></a>, 平台名称, 2023.</font>
-			</li>
-		</ul>
-		<p></p>
+	<p><b><font face="Arial" size="4"><br>Projects</font></b></p>
+	<ul>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				<b>待定：项目名称</b>, 2023<br>
+				待定：项目描述<br>
+				<a href="#"><font color="#444444">项目链接</font></a>
+			</font></p>
+		</li>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				<b>待定：项目名称</b>, 2022<br>
+				待定：项目描述<br>
+				<a href="#"><font color="#444444">项目链接</font></a>
+			</font></p>
+		</li>
+	</ul>
 
-	<p><b><font face="Arial" size="4"><br>
-		Projects</font></b></p>
-		<ul>
-			<li>
-				<p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font face="Arial" size="2"><b>待定：项目名称</b>, 2023</font><br>
-				<font face="Arial" size="2">待定：项目描述</font><br>
-				<font face="Arial" size="2"><a href="#"><font color="#444444">项目链接</font></a></font>
-				</p>
-			</li>
-			<li>
-				<p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font face="Arial" size="2"><b>待定：项目名称</b>, 2022</font><br>
-				<font face="Arial" size="2">待定：项目描述</font><br>
-				<font face="Arial" size="2"><a href="#"><font color="#444444">项目链接</font></a></font>
-				</p>
-			</li>
-		</ul>
-		<p></p>
-	
-	<p><b><font face="Arial" size="4"><br>
-		Publications</font></b></p>
-		<table border="1" id="table2" style="border-width: 0px;" width="1154">
-			<tbody>
-				<tr>
-					<td style="border-style: none; border-width: medium;" valign="top" width="19">&nbsp;</td>
-					<td bgcolor="#FFCC99" style="border-style: none; border-width: medium;" valign="top" width="14">&nbsp;</td>
-					<td style="border-style: none; border-width: medium;" valign="top" width="1108">
-						<p style="margin-left: 10px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><i><font face="Arial">待定：论文标题</font></i><font face="Arial"><i><font style="font-size: 12pt;"><br></font></i></font>
-							<font color="#000000" face="Arial" size="2">待定：作者列表 and <b>Jiashun Ye</b></font><b><font color="#000000" face="Arial" size="2"><br></font></b>
-							<font face="Arial" size="2">待定：会议/期刊名称, 年份</font><br>
-						<font face="Arial" size="2">
-						<a href="#"><font color="#808080"><font color="#808080">arXiv</font></font></a>&nbsp;&nbsp;&nbsp;<b><a href="#"><font color="#808080" face="Arial" size="2">code</font></a></b>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+	<p><b><font face="Arial" size="4"><br>Publications</font></b></p>
+	<table border="1" id="table2" style="border-width: 0px;" width="1154">
+		<tbody>
+			<tr>
+				<td style="border-style: none; border-width: medium;" width="19">&nbsp;</td>
+				<td bgcolor="#FFCC99" style="border-style: none; border-width: medium;" width="14">&nbsp;</td>
+				<td style="border-style: none; border-width: medium;" width="1108">
+					<p style="margin-left: 10px; line-height: 150%;"><i><font face="Arial">待定：论文标题</font></i><br>
+					<font face="Arial" size="2">待定：作者列表 and <b>Jiashun Ye</b><br>
+					待定：会议/期刊名称, 年份<br>
+					<a href="#"><font color="#808080">arXiv</font></a>&nbsp;&nbsp;&nbsp;
+					<b><a href="#"><font color="#808080">code</font></a></b>
+					</font></p>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 
-	<p><b><font face="Arial" size="4"><br>
-		%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font color="#444444" face="Arial" size="2"><font color="#444444" face="Arial" size="2">待定：竞赛名称</font>, 奖项, 年份</font></p>
-			</li>
-			<li>
-				<p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font color="#444444" face="Arial" size="2"><font color="#444444" face="Arial" size="2">待定：竞赛名称</font>, 奖项, 年份</font></p>
-			</li>
-		</ul>
-		<p></p>
+	<p><b><font face="Arial" size="4"><br>Competitions</font></b></p>
+	<ul>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				2025.1 MathorCup数学应用挑战赛——大数据竞赛（第五届）本科生组 全国二等奖 [<a href="http://mathorcup.org/detail/2457">link</a>]
+			</font></p>
+		</li>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				2024.12 全国大学生数学竞赛（第十六届）数学A组 江苏赛区一等奖 [<a href="https://www.cmathc.org.cn/?csmd/101.html">link</a>]
+			</font></p>
+		</li>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				2024.6 泰迪杯数据挖掘竞赛（第十二届）本科组 全国一等奖 [<a href="https://www.tipdm.org/dsej12/2429.jhtml">link</a>]
+			</font></p>
+		</li>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				2023.12 全国大学生数学竞赛（第十五届）数学A组 江苏赛区一等奖 [<a href="https://www.cmathc.org.cn/?csmd/107.html">link</a>]
+			</font></p>
+		</li>
+	</ul>
 
-	<p><b><font face="Arial" size="4"><br>
-		External Links</font></b></p>
-		<ul>
-			<li>
-				<p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font face="Arial" size="2"><a href="https://github.com/jiashun-ye"><font color="#444444">GitHub</font></a></font></p>
-			</li>
-			<li>
-				<p style="line-height: 150%; margin-left: 15px; margin-top: 0pt; margin-bottom: 0pt;"><font face="Arial" size="2"><a href="#"><font color="#444444">待定：其他平台链接</font></a></font></p>
-			</li>
-		</ul>
-		<p></p>
-	
-	<p><font size="2"><font size="2"><font size="2">&nbsp;<br>
-	&nbsp; <i><font face="Arial" size="2">Last updated: June 2024</font></i></font></font></font></p>
+	<p><b><font face="Arial" size="4"><br>External Links</font></b></p>
+	<ul>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				<a href="https://github.com/jiashun-ye"><font color="#444444">GitHub</font></a>
+			</font></p>
+		</li>
+		<li>
+			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
+				<a href="#"><font color="#444444">待定：其他平台链接</font></a>
+			</font></p>
+		</li>
+	</ul>
+
+	<p><font face="Arial" size="2"><i>Last updated: June 2024</i></font></p>
 </body>
 </html>
