Initial commit - upload personal homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<title>Jiashun Ye</title>
 	<meta charset="utf-8">
-    <link rel="icon" href="https://www.seu.edu.cn/favicon.ico" sizes="32x32">
+	<link rel="icon" href="img/myfavicon.png" type="image/png">
 </head>
 <body leftmargin="40" bgcolor="#FFFFFF" link="#444444" text="#444444">
 	<table border="0" id="table1" width="720">
@@ -33,11 +33,11 @@
 						<a href="https://www.seu.edu.cn/"><font color="#444444">Southeast University</font></a>. 
 						My research interests include machine learning, computer vision, and mathematical optimization.
 						<br><br>
-						待定：在这里添加更多关于你的研究兴趣、目标和背景的介绍。
+						To be added: more information about my research interests, goals, and academic background.
 						<br><br>
-						待定：在这里添加一些个人特色和成就。
+						To be added: personal highlights and achievements.
 						<br><br>
-						待定：在这里添加一些未来规划，如研究生申请方向等。
+						To be added: future plans, such as graduate study directions.
 						<br><br>
 					</font></p>
 				</td>
@@ -49,12 +49,12 @@
 	<ul>
 		<li>
 			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
-				<b>Southeast University</b>, B.S. in Mathematics, minor in Computer Science, 2020–2024 (待定)
+				<b>Southeast University</b>, B.S. in Mathematics, minor in Computer Science, 2020–2024 (to be confirmed)
 			</font></p>
 		</li>
 		<li>
 			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
-				<b>待定</b>: 实习或工作经历
+				<b>To be added</b>: Internship or work experience
 			</font></p>
 		</li>
 	</ul>
@@ -63,7 +63,7 @@
 	<ul>
 		<li>
 			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
-				<a href="#"><font color="#444444">待定：在线教学课程名称</font></a>, 平台名称, 2023.
+				<a href="#"><font color="#444444">To be added: Online course title</font></a>, Platform name, 2023.
 			</font></p>
 		</li>
 	</ul>
@@ -72,16 +72,16 @@
 	<ul>
 		<li>
 			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
-				<b>待定：项目名称</b>, 2023<br>
-				待定：项目描述<br>
-				<a href="#"><font color="#444444">项目链接</font></a>
+				<b>To be added: Project Title</b>, 2023<br>
+				To be added: Project Description<br>
+				<a href="#"><font color="#444444">Project link</font></a>
 			</font></p>
 		</li>
 		<li>
 			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
-				<b>待定：项目名称</b>, 2022<br>
-				待定：项目描述<br>
-				<a href="#"><font color="#444444">项目链接</font></a>
+				<b>To be added: Project Title</b>, 2022<br>
+				To be added: Project Description<br>
+				<a href="#"><font color="#444444">Project link</font></a>
 			</font></p>
 		</li>
 	</ul>
@@ -93,9 +93,9 @@
 				<td style="border-style: none; border-width: medium;" width="19">&nbsp;</td>
 				<td bgcolor="#FFCC99" style="border-style: none; border-width: medium;" width="14">&nbsp;</td>
 				<td style="border-style: none; border-width: medium;" width="1108">
-					<p style="margin-left: 10px; line-height: 150%;"><i><font face="Arial">待定：论文标题</font></i><br>
-					<font face="Arial" size="2">待定：作者列表 and <b>Jiashun Ye</b><br>
-					待定：会议/期刊名称, 年份<br>
+					<p style="margin-left: 10px; line-height: 150%;"><i><font face="Arial">To be added: Paper Title</font></i><br>
+					<font face="Arial" size="2">To be added: Author list and <b>Jiashun Ye</b><br>
+					To be added: Conference or Journal name, year<br>
 					<a href="#"><font color="#808080">arXiv</font></a>&nbsp;&nbsp;&nbsp;
 					<b><a href="#"><font color="#808080">code</font></a></b>
 					</font></p>
@@ -137,7 +137,8 @@
 		</li>
 		<li>
 			<p style="line-height: 150%; margin-left: 15px;"><font face="Arial" size="2">
-				<a href="#"><font color="#444444">待定：其他平台链接</font></a>
+				Blog: <a href="https://jiashun-ye.github.io/zh-blog/"><font color="#444444">中文</font></a> / 
+				<a href="https://jiashun-ye.github.io/en-blog/"><font color="#444444">English</font></a>
 			</font></p>
 		</li>
 	</ul>
